Fix several blob histograms that were broken over a year ago.

Specifically this fixes Storage.Blob.TotalSize to take into account size
of bytes elements again (broken in https://crrev.com/432960).

And fixes the various Storage.BlobItemSize.* histograms to not subtract
the offset of the size (length is already relative to offset, so
subtracting offset again doesn't make sense) (broken in
https://crrev.com/315702).

Bug: 803506
Change-Id: I2f803ac1c574b9491b7e05fc2b96e82029d51c78
Reviewed-on: https://chromium-review.googlesource.com/874410
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530250}
Former-commit-id: 600477e63cccafefa3adeb114f57a213524c2cd8